# gridsense

./: .env.example  .gitignore  README.md  pyproject.toml
src/gridsense/: __init__.py
src/gridsense/agents/: __init__.py  react_adk.py  react_manual.py
src/gridsense/eia/: __init__.py  cli.py  client.py  models.py  regions.py
src/gridsense/llm/: __init__.py  hello.py  structured.py  tool_call.py
src/gridsense/rag/: __init__.py  aliases.py  answer.py  ingest.py  search.py
tests/: test_models.py  test_rag.py
